--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,43 @@
-
 /* Your CSS Code here. */
+*{
+	padding:0px;
+	box-sizing:border-box;
+}
+.container{
+	display:flex;
+	flex-wrap:wrap;
+	flex-direction:row;
+	justify-content:space-around;
+	/* width:100vw;
+	height:100vh; */
+}
+.container-1{
+	display:flex;
+	flex-wrap:wrap;
+	flex-direction:row;
+	/* justify-content:space-around; */
+	/* width:100vw;
+	height:100vh; */
+}
+.third{
+	height:100px;
+	width:100px;
+	background-color:green;
+}
+#third{
+	flex-wrap:flex-start;
+}
+.second{
+	height:100px;
+	width:100px;
+	background-color:blue;
+}
+
+.first{
+	height:100px;
+	width:100px;
+	background-color:red;
+}
+h1{
+	
+}
